fix(flow): text size on safari ios sometimes unexpectly got giant (#26)

--- a/styles/@code-editor/mod.css
+++ b/styles/@code-editor/mod.css
@@ -19,6 +19,7 @@ form .editor {
   font-family: var(--ft-mono);
   font-size: 1rem;
   line-height: 1.5;
+  -webkit-text-size-adjust: 100%;
   white-space: pre-wrap;
 }
 
